Review comments and initial run notes

--- a/misc/migrationAides/templates/migration_deployment_template.yaml
+++ b/misc/migrationAides/templates/migration_deployment_template.yaml
@@ -1,3 +1,21 @@
+# IBM_PROLOG_BEGIN_TAG
+#
+# Copyright 2021 IBM International Business Machines Corp.
+#
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
+#
+#           http://www.apache.org/licenses/LICENSE-2.0
+#
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+#  implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
+#  IBM_PROLOG_END_TAG
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -27,7 +45,7 @@ spec:
           - "/bin/sh"
           - "-c"
         args:
-          - 'touch /tmp/healthy && touch /opt/powerai-vision/data/logs/migration && echo "migration" && echo "migration" >&2 && sleep 180' 
+          - 'touch /tmp/healthy && /usr/local/migration/migmgr.py --deployment {{deploymentName}} --migType full --sMongouser {{mongoUser}} --sMongopw {{mongoPW}}--sMongoservice vision-mongodb --log debug --dCluster {{destCluster}} --dToken {{destToken}} --dProject {{destProject}} >&2 && sleep 365d'
         volumeMounts:
           - name: dlaas-data
             mountPath: "/opt/powerai-vision/data"
