Run Notes and Review Comments (#44)

--- a/misc/migrationAides/Dockerfile
+++ b/misc/migrationAides/Dockerfile
@@ -1,22 +1,24 @@
-# IBM_SOURCE_PROLOG_BEGIN_TAG
-# *****************************************************************
+# IBM_PROLOG_BEGIN_TAG
 #
-# IBM Confidential
-# OCO Source Materials
+# Copyright 2021 IBM International Business Machines Corp.
 #
-# (C) Copyright IBM Corp. 2021
+#  Licensed under the Apache License, Version 2.0 (the "License");
+#  you may not use this file except in compliance with the License.
+#  You may obtain a copy of the License at
 #
-# The source code for this program is not published or otherwise
-# divested of its trade secrets, irrespective of what has been
-# deposited with the U.S. Copyright Office.
+#           http://www.apache.org/licenses/LICENSE-2.0
 #
-# *****************************************************************
-# IBM_SOURCE_PROLOG_END_TAG
+#  Unless required by applicable law or agreed to in writing, software
+#  distributed under the License is distributed on an "AS IS" BASIS,
+#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+#  implied.
+#  See the License for the specific language governing permissions and
+#  limitations under the License.
+#
+#  IBM_PROLOG_END_TAG
 
 FROM registry.access.redhat.com/ubi8/python-36
 
-ARG KUBECTL_VERSION="v1.16.2"
-ARG HELM_VERSION="v3.2.1"
 ARG OC_VERSION="4.4"
 
 USER root
@@ -37,16 +39,6 @@ RUN  set -eux; \
     esac; \
     pip install --upgrade pip && \
     pip install requests pymongo Vision-Tools && \
-    # Install kubectl
-    curl -LO "https://storage.googleapis.com/kubernetes-release/release/${KUBECTL_VERSION}/bin/linux/${_ARCH}/kubectl" && \
-	chmod +x kubectl && \
-	mv kubectl /usr/local/bin/ && \
-    # Install Helm
-    curl -LO "https://get.helm.sh/helm-${HELM_VERSION}-linux-${_ARCH}.tar.gz" && \
-	mkdir -p "/usr/local/helm-${HELM_VERSION}" && \
-	tar -xzvf "helm-${HELM_VERSION}-linux-${_ARCH}.tar.gz" -C "/usr/local/helm-$HELM_VERSION" && \
-	ln -s "/usr/local/helm-${HELM_VERSION}/linux-${_ARCH}/helm" /usr/local/bin/helm && \
-	rm -f "helm-${HELM_VERSION}-linux-${_ARCH}.tar.gz" && \
     # Install OC
     curl -LO "https://mirror.openshift.com/pub/openshift-v4/clients/oc/${OC_VERSION}/${OC_ARCH}/oc.tar.gz" && \
     tar -xzvf "oc.tar.gz" -C "/usr/local/bin/" && \
@@ -55,10 +47,9 @@ RUN  set -eux; \
     mkdir -p /usr/local/migration/vapi/accessors && \
     touch /usr/local/migration/vapi/__init__.py && \
     touch /usr/local/migration/vapi/accessors/__init__.py && \
-    chmod -R 777 /usr/local/migration
+    chmod -R 775 /usr/local/migration
 
-USER 1979
+USER 1979:1979
 COPY cmds/* /usr/local/migration/
 COPY lib/accessors/* /usr/local/migration/vapi/accessors/
 
-CMD python3 --version; rsync --version
